@@ -22,21 +22,21 @@
 
 IF (NOT @YARPY_DEV_LIB_NAME@_FOUND)
 
-  INCLUDE(@YARPY_DEV_DIR@/@YARPY_DEV_LIB_NAME@Dependencies.cmake)
+  INCLUDE("@YARPY_DEV_DIR@/@YARPY_DEV_LIB_NAME@Dependencies.cmake")
   SET(@YARPY_DEV_LIB_NAME@_LIB_DEPENDS ${@YARPY_DEV_LIB_NAME@_LIB_DEPENDS} ${YARP_LIBRARIES})
 
   MESSAGE(STATUS "Using @YARPY_DEV_LIB_NAME@")
 
-  SET (@YARPY_DEV_LIB_NAME@_INCLUDE_DIR @YARPY_OUT_DIR@)
+  SET (@YARPY_DEV_LIB_NAME@_INCLUDE_DIR "@YARPY_OUT_DIR@")
   SET (@YARPY_DEV_LIB_NAME@_HEADER add_@YARPY_DEV_LIB_NAME@_devices.h)
   SET (@YARPY_DEV_LIB_NAME@_METHOD add_@YARPY_DEV_LIB_NAME@_devices)
 
   SET (@YARPY_DEV_LIB_NAME@_FOUND TRUE)
 
-  LINK_DIRECTORIES(@YARP_DEV_LIB_DIR@)
+  LINK_DIRECTORIES("@YARP_DEV_LIB_DIR@")
   IF (WIN32)
-    LINK_DIRECTORIES(@YARP_DEV_LIB_DIR@/Debug)
-    LINK_DIRECTORIES(@YARP_DEV_LIB_DIR@/Release)
+    LINK_DIRECTORIES("@YARP_DEV_LIB_DIR@/Debug")
+    LINK_DIRECTORIES("@YARP_DEV_LIB_DIR@/Release")
   ENDIF (WIN32)
 
   # Maintain a list of all device libraries in use, so that we can
